<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/error_message"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/currency_fetching_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"/>


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_marginBottom="30sp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_exchange" />

        <TextView
            android:id="@+id/currency_top_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exchange_top_label" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/exchange_top_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="0.0" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="PLN" />
        </LinearLayout>

        <TextView
            android:id="@+id/exchange_bottom_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exchange_bottom_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/exchange_bottom_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="0.0" />

            <Spinner
                android:id="@+id/exchange_spinner"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>